--- a/Inicial/src/main/java/TelasPrincipais/Tela_Produto.form
+++ b/Inicial/src/main/java/TelasPrincipais/Tela_Produto.form
@@ -655,6 +655,7 @@
                 </Property>
               </Properties>
               <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtPcCompraActionPerformed"/>
                 <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtPcCompraKeyPressed"/>
                 <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtPcCompraKeyTyped"/>
               </Events>
