--- a/Inicial/src/main/java/TelasPrincipais/TelaDeVendas.form
+++ b/Inicial/src/main/java/TelasPrincipais/TelaDeVendas.form
@@ -254,17 +254,16 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="txtNomeProd" min="-2" pref="415" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="btnBusca" min="-2" pref="63" max="-2" attributes="0"/>
-                          <EmptySpace pref="48" max="32767" attributes="0"/>
+                          <Component id="btnBusca" pref="71" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace min="-2" pref="127" max="-2" attributes="0"/>
                           <Component id="btnAdicionarItem" min="-2" pref="199" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="btnExcluirItem" min="-2" pref="193" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                       </Group>
                   </Group>
+                  <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
