--- a/Inicial/src/main/java/TelasPrincipais/Tela_Cliente.form
+++ b/Inicial/src/main/java/TelasPrincipais/Tela_Cliente.form
@@ -248,6 +248,7 @@
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtBusca">
                   <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtBuscaActionPerformed"/>
                     <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtBuscaKeyTyped"/>
                   </Events>
                 </Component>
@@ -259,6 +260,9 @@
                     <Property name="selected" type="boolean" value="true"/>
                     <Property name="text" type="java.lang.String" value="Nome"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbNomeActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JRadioButton" name="rbCPF">
                   <Properties>
@@ -267,6 +271,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="CPF"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbCPFActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="btProcurar">
                   <Properties>
